Refactored code to be compatible with jenkins -jdk 11